--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <th>!</th>
         <tr>!</tr>
     </table>
-    <butto>feature</butto>n
+    <button>feature</button>n
 </body>
 </html>
